--- a/styles.css
+++ b/styles.css
@@ -76,11 +76,11 @@ body {
     height: 100%;
 }
 
-/* Aseguramos que las imágenes tengan el mismo tamaño y no distorsionen */
+
 .project-card img {
     width: 100%;
-    height: 200px; /* Establece la altura fija para todas las imágenes */
-    object-fit: cover; /* Mantiene la proporción de la imagen */
+    height: 200px; 
+    object-fit: cover; 
     border-radius: 5px;
 }
 
